--- a/analysis/2025.Rmd
+++ b/analysis/2025.Rmd
@@ -460,9 +460,10 @@ There are still 5 significant burden test genes (AHNAK2, DNMT3A, NOD2, SBNO2, AT
   
   ![](assets/DNMT3A_tpm.png){width="80%"}
   
-- Check TPM of genes on different tissue
-  - Near all have extreme high expression in Cells - EBV-transformed lymphocytes for those missed in eQTLGen and GBAT
+- Check TPM of genes on bulk data
+  - Near all gene expression for those missed genes in trans effect are higher, probably due to have extreme high TPM in some tissues, whereas those overlapped genes don't have such extreme expression. 
   
+  ![](assets/bulk_tpm.png){width="80%"}
 
 ### Perturb-seq data
 - How does the data generated
