--- a/analysis/2025.Rmd
+++ b/analysis/2025.Rmd
@@ -466,7 +466,7 @@ There are still 5 significant burden test genes (AHNAK2, DNMT3A, NOD2, SBNO2, AT
   ![](assets/bulk_tpm.png){width="80%"}
 
 ### Perturb-seq data
-- How does the data generated
+How does the data generated
   - what is cell line
   - trans regulation target, gene_id?
     - direction of correlation, which one regulate which?
