--- a/analysis/2025.Rmd
+++ b/analysis/2025.Rmd
@@ -454,7 +454,7 @@ There are still 5 significant burden test genes (AHNAK2, DNMT3A, NOD2, SBNO2, AT
   
   - AHNAK2 (AHNAK nucleoprotein 2; chr14:104937762-104978374:-): Higher expression in skin tissue then whole blood
   
-  ![](assets/AHNAK_tpm.png){width="80%"}
+  ![](assets/AHNAK2_tpm.png){width="80%"}
   
   - DNMT3A (DNA methyltransferase 3 alpha; chr2:25227855-25342590:-): Expressed in all tissues, no really extream TPM values in some tissue
   
