add ppi rotation project

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -21,3 +21,5 @@ Welcome to my research website. This website document my research progression.
 ## Topics
 
 - Progress in 2025. [click](2025.html)
+
+- Progress in rotation. [click](rotation.html)
