--- a/analysis/rotation.Rmd
+++ b/analysis/rotation.Rmd
@@ -89,14 +89,22 @@ The overall trend as expected, PPI pairs have higher probability then random pai
 
 - Table for cisQTL for B given there is transQTL for A
 
-Table: Total Number of Cis-Trans Pairs (p < 5e-8) by Dataset
 
-| Dataset | Total | trans-cis | 
-|---------|-------|-----------|
-| bioplex | 5800  |    21     |
-| corum   | 2542  |    25     | 
-| hippie  | 2692  |    11     |
-| random  | 4471  |    6      |
+
+```{r}
+library(knitr)
+library(kableExtra)
+
+df <- data.frame(
+  Dataset = c("bioplex", "corum", "hippie", "random"),
+  total = c(5800, 2542, 2692, 4471),
+  `trans-cis` = c(21, 25, 11, 6)
+)
+
+kable(df, align = "c", caption = "Table: Total Number of Cis-Trans Pairs (p < 5e-8) by Dataset") %>%
+  kable_styling(full_width = F, position = "center")
+
+```
 
 Note: Total pairs is the number of unique pairs * 2
 
