--- a/analysis/rotation.Rmd
+++ b/analysis/rotation.Rmd
@@ -101,7 +101,7 @@ df <- data.frame(
   `trans-cis` = c(21, 25, 11, 6)
 )
 
-kable(df, align = "c", caption = "Table: Total Number of Cis-Trans Pairs (p < 5e-8) by Dataset") %>%
+kable(df, align = "c", caption = "Table: Total Number of Cis-Trans Pairs") %>%
   kable_styling(full_width = F, position = "center") %>%
   column_spec(1, width = "5cm") %>%
   column_spec(2, width = "4cm") %>%
